<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="340dp"
        android:layout_height="450dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/onboarding1_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding1" />

    <TextView
        android:layout_width="377dp"
        android:layout_height="97dp"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/onboarding_text"
        android:textColor="#F8F5F5"
        android:textSize="29sp" />

    <Button
        android:id="@+id/lets_start_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#647FC1"
        android:text="@string/lets_start" />

</LinearLayout>
