<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1E90FF"
        android:orientation="vertical"
        android:padding="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="400dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/onboarding2_image_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/onboarding2" />

        <TextView
            android:layout_width="342dp"
            android:layout_height="162dp"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/onboarding2_text"
            android:textColor="#F8F5F5"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/skip_button"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:text="@string/skip"
                android:backgroundTint="#647FC1"
                android:textColor="#F1F1F2" />

            <Button
                android:id="@+id/go_button"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_marginStart="16dp"
                android:text="@string/go"
                android:backgroundTint="#647FC1"
                android:textColor="#E2E5E9" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/curve_divider"
        android:layout_width="0dp"
        android:layout_height="0dp" />

</RelativeLayout>
